force-app/main/default/objects/Product_Delivery__c/Product_Delivery__c.object-meta.xml
<CustomObject>
    <label>Product Delivery</label>
    <nameField>
        <displayFormat>PD# {00000}</displayFormat>
        <label>Product Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Deliveries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>