force-app/main/default/objects/Product_Delivery__c/fields/Confirmed_delivery_date_time__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_delivery_date_time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed delivery date/time</label>
    <type>Checkbox</type>
</CustomField>