force-app/main/default/objects/Product_Delivery__c/fields/Customer_billing_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_billing_address__c</fullName>
    <formula>Customer__r.BillingStreet  &amp; &apos; &apos; &amp;  Customer__r.BillingPostalCode &amp; &apos; &apos; &amp;  Customer__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer billing address</label>
    <type>Text</type>
</CustomField>