force-app/main/default/objects/Product_Delivery__c/fields/Customer_contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_contact__c</fullName>
    <label>Customer contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>