force-app/main/default/objects/Product_Delivery__c/fields/Customer_order_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_order_date__c</fullName>
    <label>Customer order date</label>
    <type>Date</type>
</CustomField>