force-app/main/default/objects/Product_Delivery__c/fields/Customer_order_nr__c.field-meta.xml
<CustomField>
    <fullName>Customer_order_nr__c</fullName>
    <label>Customer order nr.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>