force-app/main/default/objects/Product_Delivery__c/fields/Customer_phone_nr__c.field-meta.xml
<CustomField>
    <fullName>Customer_phone_nr__c</fullName>
    <label>Customer phone nr.</label>
    <type>Phone</type>
</CustomField>