force-app/main/default/objects/Product_Delivery__c/fields/DDT_Nr__c.field-meta.xml
<CustomField>
    <fullName>DDT_Nr__c</fullName>
    <label>DDT Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>