force-app/main/default/objects/Product_Delivery__c/fields/Delivery_originating_from__c.field-meta.xml
<CustomField>
    <fullName>Delivery_originating_from__c</fullName>
    <label>Delivery originating from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Luleå</fullName>
            </value>
            <value>
                <fullName>Pluvigner</fullName>
            </value>
            <value>
                <fullName>Rodano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>