force-app/main/default/objects/Product_Delivery__c/fields/Delivery_Redirected__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Redirected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select when delivery is redirected from the manufacturing site to the local warehouse</inlineHelpText>
    <label>Delivery Redirected</label>
    <type>Checkbox</type>
</CustomField>