force-app/main/default/objects/Product_Delivery__c/fields/Delivery_time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_time__c</fullName>
    <label>Delivery time</label>
    <type>Time</type>
</CustomField>