force-app/main/default/objects/Product_Delivery__c/fields/ERP_Order_Nr__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Nr__c</fullName>
    <label>ERP Order Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>