force-app/main/default/objects/Product_Delivery__c/fields/External_agent_email__c.field-meta.xml
<CustomField>
    <fullName>External_agent_email__c</fullName>
    <label>External agent email</label>
    <type>Email</type>
</CustomField>