force-app/main/default/objects/Product_Delivery__c/fields/External_agent_name__c.field-meta.xml
<CustomField>
    <fullName>External_agent_name__c</fullName>
    <label>External agent name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>