force-app/main/default/objects/Product_Delivery__c/fields/Nr_of_Porters_Required__c.field-meta.xml
<CustomField>
    <fullName>Nr_of_Porters_Required__c</fullName>
    <label>Nr. of Porters Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>