force-app/main/default/objects/Product_Delivery__c/fields/Product_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Product_Last_Modified__c</fullName>
    <label>Product Last Modified</label>
    <summarizedField>Product_Delivery_Line_Item__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Product_Delivery_Line_Item__c.Product_Delivery_Nr__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>