force-app/main/default/objects/Product_Delivery__c/fields/Service_Technician__c.field-meta.xml
<CustomField>
    <fullName>Service_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Deliveries2</relationshipName>
    <type>Lookup</type>
</CustomField>