force-app/main/default/objects/Product_Delivery__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <inlineHelpText>Specify a shipping address if different from the account&apos;s address</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>