force-app/main/default/objects/Product_Delivery__c/fields/TSM__c.field-meta.xml
<CustomField>
    <fullName>TSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Deliveries3</relationshipName>
    <type>Lookup</type>
</CustomField>