force-app/main/default/objects/Product_Delivery__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <type>TextArea</type>
</CustomField>