force-app/main/default/objects/Product_Delivery__c/fields/Warranty_Other__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Other__c</fullName>
    <label>Warranty (Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>