force-app/main/default/objects/Product_Delivery__c/validationRules/Warranty_other_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_other_required</fullName>
    <active>true</active>
    <description>Warranty (Other) required if Warranty = &apos;Other (specify)&apos;</description>
    <errorConditionFormula>AND(
ISPICKVAL( Warranty__c , &apos;Other (specify)&apos;),
ISBLANK( Warranty_Other__c ) 
)</errorConditionFormula>
    <errorDisplayField>Warranty_Other__c</errorDisplayField>
    <errorMessage>Please enter warranty</errorMessage>
</ValidationRule>