force-app/main/default/objects/Product_Delivery__c/listViews/Current_quarter.listView-meta.xml
<ListView>
    <fullName>Current_quarter</fullName>
    <columns>Delivery_date__c</columns>
    <columns>Delivery_time__c</columns>
    <columns>Confirmed_delivery_date_time__c</columns>
    <columns>Delivery_originating_from__c</columns>
    <columns>Customer__c</columns>
    <columns>Service_Technician__c</columns>
    <columns>External_agent_name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_date__c</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>Current quarter</label>
    <language>en_GB</language>
</ListView>